[package]
name = "garraia-glob"
version = "0.1.0"
edition = "2021"
description = "Glob matching engine for GarraRUST"
license = "MIT OR Apache-2.0"

[dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
regex = "1.10"
notify = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "matching"
harness = false

[features]
default = []
serde = []
# GAR-259: file watcher with glob filtering
watcher = ["dep:notify"]
