[package]
name = "garraia-media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media processing (image, audio, video) for GarraIA"

[dependencies]
garraia-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
