[package]
name = "garraia-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin system and extension runtime for GarraIA"

[dependencies]
garraia-common = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
wasmtime = { workspace = true }
# GAR-454: consume the workspace pin (was hardcoded "28" pre-bump). The
# workspace declaration enables `features = ["p1"]` so that
# `WasiCtxBuilder::build_p1()` remains available in wasmtime 44+.
wasmtime-wasi = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
notify = { workspace = true }
