[package]
name = "garraia-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime principal do GarraIA — state machine, meta-controller e executor"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

garraia-common = { path = "../garraia-common" }
garraia-tools = { path = "../garraia-tools" }
