[package]
name = "garraia-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Object storage abstraction for GarraIA — ObjectStore trait + LocalFs baseline (GAR-394 slice 1)"

[dependencies]
async-trait = "0.1"
bytes = "1"
hex = "0.4"
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
