[package]
name = "garraia-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Object storage abstraction for GarraIA — ObjectStore trait + LocalFs + S3Compatible (GAR-394 slices 1+2)"

[features]
default = []
# Enables aws-sdk-s3 + aws-config + the `S3Compatible` backend.
# Consumers (e.g. garraia-gateway slice 3) opt in to keep the baseline
# crate lightweight.
storage-s3 = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-s3",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-types",
    "dep:base64",
]

[dependencies]
async-trait = "0.1"
bytes = "1"
hex = "0.4"
hmac = "0.12"
serde = { workspace = true }
sha2 = "0.10"
subtle = "2"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true }
url = "2"

# Feature-gated S3 stack.
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"], optional = true }
aws-credential-types = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"], optional = true }
aws-smithy-runtime-api = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
