[package]
name = "garraia-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Multi-tenant Postgres workspace (groups, members, auth, RBAC, audit) — Fase 3"

[dependencies]
# SQL driver. The "macros" feature is required ONLY by the migrate!() macro
# at crates/garraia-workspace/src/store.rs:11 — there are no query!() or
# query_as!() call sites anywhere in the workspace (verify with:
# `rg 'sqlx::query!|sqlx::query_as!|\bquery!\(|\bquery_as!\('`). If you
# add the first compile-time-checked query!() macro, drop this comment.
# See plan 0003 §12 Q1 for the original rationale.
#
# TLS feature is intentionally absent: Postgres connection runs on a private
# network (self-host or managed instance behind the gateway). If the workspace
# is ever deployed across a public network, enable `tls-rustls` here and
# document the change; do NOT silently promote to the workspace root sqlx dep
# without verifying the TLS feature survives the promotion.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros", "json"] }
# Identifiers
uuid = { version = "1", features = ["v7", "serde"] }
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Errors
thiserror = { workspace = true }
# Async runtime
tokio = { workspace = true }
# Tracing (PII-safe spans via skip)
tracing = { workspace = true }
# Config validation
validator = { version = "0.20", features = ["derive"] }
# pgvector bindings for sqlx — enables binding Vec<f32> → vector(768) in
# migration 005 (memory_embeddings). Runtime-only, no macros.
pgvector = { version = "0.4", features = ["sqlx"] }

[dev-dependencies]
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
anyhow = "1"
rand = "0.10"
rand_chacha = "0.3"
# scopeguard: panic-safe defer for the RLS Cenário 4 ownership transfer dance.
# Without it, a panic/early-return between ALTER TABLE ... OWNER TO test_role
# and the restore call would leave the table owned by the test role for the
# rest of the testcontainer lifetime.
scopeguard = "1"
